# Buddy

./: .gitignore  BUDDY_STATUS.md  CLAUDE.md
.github/workflows/: build-windows.yml  release-mac.yml  release-windows.yml  release.yml
Buddy/: ActivityMonitor.swift  AppDelegate.swift  AppSettings.swift  BuddyApp.swift  BuddyState.swift  CharacterTheme.swift  ChatManager.swift  ChatView.swift  CompanionPanel.swift  CompanionView.swift  FriendAvatarView.swift  FriendPanelManager.swift  Info.plist  PresenceManager.swift
Buddy.xcodeproj/: project.pbxproj
Buddy.xcodeproj/xcshareddata/xcschemes/: Buddy.xcscheme
Buddy/Assets.xcassets/owl_active_closed.imageset/: Contents.json
Buddy/Assets.xcassets/owl_active_closed2.imageset/: Contents.json
Buddy/Assets.xcassets/owl_active_half.imageset/: Contents.json
Buddy/Assets.xcassets/owl_active_half2.imageset/: Contents.json
Buddy/Assets.xcassets/owl_active_open.imageset/: Contents.json
buddy-windows/: chat.html  friend.html  index.html  package-lock.json  package.json  tray-menu.html  vite.config.ts  welcome.html
buddy-windows/src/: chat.css  chat.ts  companion.ts  friend-panel.ts  friend.css  friend.ts  idle-monitor.ts  main.ts  presence.ts  settings.ts  style.css  theme.ts  tray-menu.ts  tray.ts  types.ts
buddy-windows/src-tauri/: Cargo.toml  tauri.conf.json
buddy-windows/src-tauri/capabilities/: default.json
buddy-windows/src-tauri/src/: idle.rs  lib.rs  main.rs
website/: appcast.xml  index.html  update.json
worker/: package.json  wrangler.toml
worker/src/: index.js
(+11 files in other folders)
